Changelog
=========

1.8.dev0 - (unreleased)
-----------------------

1.7 - (2015-07-28)
------------------
* Change: Replace pycurl2 with eventlet
  [david-batranu refs #25721]

1.6 - (2014-09-15)
------------------
* Feature: change the default query method from GET to POST.
  [pasoviul refs #20501]

1.5 - (2013-11-21)
------------------
* Feature: added "method" as a parameter for query() and now we can use
  either GET or POST methods
  [ghicaale refs #14491]

1.4 - (2013-07-08)
------------------
* Bugfix: Use a temporary file for parsing instead of using a huge string
  [szabozo0 refs #14826]

1.3 - (2013-05-20)
------------------
* Bug fix: fixed ReST merkup under HISTORY.txt
  [ghicaale refs #14554]

1.2 - (2013-05-20)
------------------
* Upgrade step:
   - install system dependency libcurl3-dev (Debian/Ubuntu) / curl-devel (CentOS)
   - [szabozo0 refs #14349]
* Change: Use pycurl2 instead of pycurl
  [szabozo0 refs #14349]
* Bugfix: Use pycurl instead of urllib2, added timeout functionality
  [szabozo0 refs #14349]

1.1 - (2013-03-15)
------------------
* Feature: Removed sparql error handling quickfix
  [szabozo0 refs #13705]

1.0 - (2013-01-28)
------------------
* Feature: Handle sparql errors
  [szabozo0 #9608]

0.16 - (2013-01-15)
-------------------
* Bug fix: Strip the endpoint url
  [szabozo0]

0.15 - (2013-01-10)
-------------------
* Packaging fix: inline contents of version.txt
  [moregale]

0.14 - (2013-01-10)
-------------------
* Bug fix: updated History.txt
  [ghicaale]
* Buf fix: unit test
  [moregale]

0.13 - (2012-09-11)
-------------------
* Change: changed from HTTP POST to GET
  [roug]

0.12 - (2012-09-11)
-------------------
* No changes

0.11 - (2012-04-15)
-------------------
* Feature: added copyright message to sparql.py
  [roug]

0.10 - (2012-03-05)
-------------------
* Feature: map the ``xsd:int`` type to Python's ``int``
  [moregale]

0.9 - (2011-10-24)
------------------